# src/main/java/org/traccar/model/Position.java
@@ -51,6 +51,9 @@ public class Position extends Message {
     public static final String KEY_VIDEO = "video";
     public static final String KEY_AUDIO = "audio";
 
+    public static final String KEY_LIGHTSWITCH = "lightswitch";
+    public static final String KEY_SOUNDSWITCH = "soundswitch";
+
     // The units for the below four KEYs currently vary.
     // The preferred units of measure are specified in the comment for each.
     public static final String KEY_POWER = "power"; // volts
